--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,3 +7,7 @@
 	default = simple
 [core]
 	excludesfile = /home/william/.gitignore_global
+[filter "lfs"]
+	clean = git lfs clean %f
+	smudge = git lfs smudge %f
+	required = true
