--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,14 @@
 #set -g default-terminal "xterm-256color"
 # Mouse works as expected
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# set -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
+
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Scrolling works as expected
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
