--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,14 +7,15 @@
 # set -g mouse-utf8 on
 set -g mouse on
 
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
+# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+# bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Scrolling works as expected
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Use the system clipboard
-# set-option -g default-command "reattach-to-user-namespace -l bash"
+# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 
 # Clear the pane and it's history
 bind -n C-k send-keys C-l \; clear-history
